--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</header>
 						<p>Name: Eric Que <br />
 						Birthday: June 6, 2004 <br />
-						Age:16</p>
+						Age:17</p>
 						<ul class="actions">
 							<li><a href="images/bio.jpg" class="button">Learn More</a></li>
 								<!-- <li><a href="index.html" class="button">Go Back</a></li> -->
@@ -441,7 +441,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="mailto:ericquexinrui0606@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Eric Que's bio</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Eric Que's bio</li>
 					</ul>
 				</div>
 			</footer>
