--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/epal.jpg" class="image fit thumb"><img src="images/fulls/epal.jpg" alt="" /></a>
+								<a href="https://www.epal.gg/" class="image fit thumb"><img src="images/fulls/epal.jpg" alt="" /></a>
 								<h3>E-pal.gg</h3>
 								<p>Game with ePal and enjoy the ultimate gaming experience</p>
 							</article>
@@ -57,11 +57,12 @@
 								<h3>Re-COnnect</h3>
 								<p>This website contains data about Pandemic, how people can help you fight Pandamic, and how people can return to their normal lives sooner. </p>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://eric0606q-stockadviser-main-stock-st-5zpvpj.streamlitapp.com/" class="image fit thumb"><img src="Ericprofile_/images/fulls/stockadviser_v1.png" alt="" /></a>
+								<h3>stockadviser website</h3>
+								<p>This is an automatic stock analysis system, users can find suitable stocks through the recommendation of this system. We will use the data on Yahoo finance, analyze the data, and draw a conclusion. This system can help those who do not have the time to look at the data of each stock or do not have the expertise to select and buy stocks.</p>
 							</article>
+							<!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
@@ -71,7 +72,8 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article> -->
+							</article> 
+							-->
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
