--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<p>This website contains data about Pandemic, how people can help you fight Pandamic, and how people can return to their normal lives sooner. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://eric0606q-stockadviser-main-stock-st-5zpvpj.streamlitapp.com/" class="image fit thumb"><img src="images/fulls/stockadviser_v1.jpg" alt="stock adviser" /></a>
+								<a href="www.google.com" class="image fit thumb"><img src="images/fulls/stockadviser_v1.jpg" alt="stock adviser" /></a>
 								<h3>stockadviser website</h3>
 								<p>This is an automatic stock analysis system, users can find suitable stocks through the recommendation of this system. We will use the data on Yahoo finance, analyze the data, and draw a conclusion. This system can help those who do not have the time to look at the data of each stock or do not have the expertise to select and buy stocks.</p>
 							</article>
