--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.epal.gg/" class="image fit thumb"><img src="images/fulls/epal.jpg" alt="" /></a>
+								<a href="https://www.epal.gg/" class="fit thumb"><img src="images/fulls/epal.jpg" alt="image_epal" ></a>
+								<!-- <a href="https://www.epal.gg/" ><img src="images/fulls/epal.jpg" alt="image_epal" ></a> -->
 								<h3>E-pal.gg</h3>
 								<p>Game with ePal and enjoy the ultimate gaming experience</p>
 							</article>
@@ -58,7 +59,7 @@
 								<p>This website contains data about Pandemic, how people can help you fight Pandamic, and how people can return to their normal lives sooner. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="www.google.com" class="image fit thumb"><img src="images/fulls/stockadviser_v1.jpg" alt="stock adviser" /></a>
+								<a href="https://www.google.com" class="image fit thumb"><img src="images/fulls/stockadviser_v1.jpg" alt="stock adviser" /></a>
 								<h3>stockadviser website</h3>
 								<p>This is an automatic stock analysis system, users can find suitable stocks through the recommendation of this system. We will use the data on Yahoo finance, analyze the data, and draw a conclusion. This system can help those who do not have the time to look at the data of each stock or do not have the expertise to select and buy stocks.</p>
 							</article>
@@ -88,7 +89,7 @@
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+										<div class="col-6 scol-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
 										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 									</div>
