--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.epal.gg/" class="fit thumb"><img src="images/fulls/epal.jpg" alt="image_epal" ></a>
+								<!-- <a href="https://www.epal.gg/" class="fit thumb"><img src="images/fulls/epal.jpg" alt="image_epal" ></a> -->
+								<a href="https://www.epal.gg/" style = "width:50%;"><img src="images/fulls/epal.jpg" alt="image_epal" ></a>
 								<!-- <a href="https://www.epal.gg/" ><img src="images/fulls/epal.jpg" alt="image_epal" ></a> -->
 								<h3>E-pal.gg</h3>
 								<p>Game with ePal and enjoy the ultimate gaming experience</p>
